--- a/app/src/main/res/layout/fragment_flutter.xml
+++ b/app/src/main/res/layout/fragment_flutter.xml
@@ -24,43 +24,43 @@
             android:id="@+id/textView"
             android:layout_width="320dp"
             android:layout_height="48dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginTop="48dp"
             android:fontFamily="sans-serif"
             android:gravity="center"
-            android:text="@string/android"
+            android:text="Flutter"
             android:textColor="@color/cardview_shadow_start_color"
             android:textSize="35sp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
         </TextView>
 
         <ImageView
+
+
             android:id="@+id/imageView"
-            android:layout_width="229dp"
-            android:layout_height="210dp"
-            android:layout_marginBottom="52dp"
-            android:src="@mipmap/ic_android"
-            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            android:layout_width="232dp"
+            android:layout_height="248dp"
+            android:layout_marginBottom="380dp"
+            android:src="@mipmap/ic_launcher"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/textView"
-            app:layout_constraintHorizontal_bias="0.505"
-            app:layout_constraintStart_toStartOf="@+id/textView" />
+            app:layout_constraintStart_toStartOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="278dp"
-            android:layout_height="157dp"
-            android:layout_marginBottom="92dp"
-            android:text="@string/androidText"
+            android:layout_width="301dp"
+            android:layout_height="153dp"
+            android:layout_marginBottom="228dp"
+            android:text="@string/flutter"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintHorizontal_bias="0.51"
-            app:layout_constraintStart_toStartOf="@+id/imageView" />
+            app:layout_constraintHorizontal_bias="0.492"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintVertical_bias="1.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
