--- a/app/src/main/res/layout/fragment_inicial.xml
+++ b/app/src/main/res/layout/fragment_inicial.xml
@@ -24,7 +24,6 @@
             android:id="@+id/textView"
             android:layout_width="320dp"
             android:layout_height="48dp"
-            android:layout_marginTop="25dp"
             android:layout_marginBottom="4dp"
             android:fontFamily="sans-serif"
             android:gravity="center"
@@ -34,27 +33,25 @@
             app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintStart_toStartOf="parent">
 
         </TextView>
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="229dp"
-            android:layout_height="210dp"
-            android:layout_marginBottom="52dp"
-            android:src="@mipmap/ic_android"
+            android:layout_width="253dp"
+            android:layout_height="234dp"
+            android:layout_marginBottom="48dp"
+            android:src="@mipmap/ic_android_round"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="@+id/textView"
-            app:layout_constraintHorizontal_bias="0.505"
+            app:layout_constraintHorizontal_bias="0.507"
             app:layout_constraintStart_toStartOf="@+id/textView" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="278dp"
             android:layout_height="157dp"
-            android:layout_marginBottom="92dp"
             android:text="@string/androidText"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
